--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ background: url("https://youtu.be/Q6m5On60yh0") no-repeat center center fixed;
 }
 
 body,#declaration {
-  background-color:/*#ce3635*/#BBB230;
+  background-color:/*#ce3635*/#E5903F;
   text-align: center;
   color:/*#fff*/#40E0D0;
   padding-top:10em;
