--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,21 +12,34 @@ background: url("https://youtu.be/Q6m5On60yh0") no-repeat center center fixed;
 	height:10px;
 }
 
-#halfspacing{
-	height:50px;
+#halfspacing, .typewrite, #declaration, .wrap{
+	max-height:15px;
 }
 
-#pillabout,#pillproj,#pillskill,#pillcontact{
-	border-color: black;
-	border-width=1px;
-	border-top-left-radius: 30px;
-	border-top-right-radius: 30px;
-	border-bottom-left-radius: 30px;
-	border-bottom-right-radius: 30px;
+.ghost{
+	/*border-color: black;
+	border-width=1px;*/
 	width:180px;
 	text-align: center;
-	height:50px;
-	background-color: lightgrey;
+	height:120px;
+    display:inline-block;
+    width:200px;
+    padding:8px;
+    color:black;
+ /*   border:3px solid black;*/
+ background-color: black;
+    text-align: center;
+    outline:none;
+    text-decoration: none;
+    transition: background-color 0.2s ease-out, color 0.2s ease-out;
+}
+
+.ghost:hover,.ghost:active{
+    background-color: rgba(0,0,0,0.4);
+    border-color: rgba(0,0,0,0.4);
+    color: white;
+    transition: background-color 0.3s ease-in, color 0.3s ease-in;
+    vertical-align: middle;
 }
 
 #minispace{
