--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ background: url("https://youtu.be/Q6m5On60yh0") no-repeat center center fixed;
     outline:none;
     text-decoration: none;
     transition: background-color 0.2s ease-out, color 0.2s ease-out;
+    box-sizing: content-box;
 }
 
 .ghost:hover,.ghost:active{
@@ -40,6 +41,7 @@ background: url("https://youtu.be/Q6m5On60yh0") no-repeat center center fixed;
     color: white;
     transition: background-color 0.3s ease-in, color 0.3s ease-in;
     vertical-align: middle;
+        box-sizing: content-box;
 }
 
 #minispace{
