--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,9 @@ background: url(../images/back2.jpg) no-repeat center center fixed;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-
+	height:"100%";
+	overflow-y: scroll;
+overflow-x: hidden;
 	}
 
 #spacing{
