--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,3 +94,33 @@ body,#declaration {
 	-o-background-size: cover;
 	background-size: cover;
 }
+
+/*For Mobile*/
+	@media only screen and (max-width: 400px){
+body{
+background: url(../images/back2.jpg) no-repeat center center fixed;
+	background-size: cover;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	height:"100%";
+	overflow-y: scroll;
+overflow-x: hidden;
+	}
+}
+
+		/*For Tablet*/
+		@media only screen and (min-width: 401px) and (max-width: 960px){
+body{
+background: url(../images/back2.jpg) no-repeat center center fixed;
+	background-size: cover;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	height:"100%";
+	overflow-y: scroll;
+overflow-x: hidden;
+	}
+}
